src/elements/_heading/index.scss
@use 'sass:map';

@use '@carbon/styles/scss/spacing';

@use '../../layout';

$config: () !default;

$-default-config: ();

@mixin styles($config: $config) {
  $props: map.deep-merge($-default-config, $config);

  margin-block-end: spacing.$spacing-03;
  margin-block-start: 1em;
  max-inline-size: min(layout.$mode--max-inline-size, 75%);
}

